[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Spells/Poison Spell.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="CircleShape2D" id=2]
radius = 19.0263

[node name="Poison Spell" type="Node2D"]
script = ExtResource( 3 )
waitTime = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9.53674e-07 )
scale = Vector2( 0.625, 0.65625 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
z_index = -1
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -19.0
margin_top = -19.0
margin_right = 19.0
margin_bottom = 20.0
color = Color( 0.901961, 0.478431, 0.027451, 1 )

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
